# mam-analyzer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-tests.yml
data/: CYBL_KEUG_REFUELING.json  ENRA_ENDU_False_refueling.json  LEBB-touchgoLEXJ-LEAS.json  LEPA-LEPP-737.json  LEPP-LEMG-737.json  LEVD-fast-crash.json  LPMA-Circuits-737.json  PAOM-PANC-B350-fromtaxi.json  UHMA-PAOM-B350.json  UHPT-UHMA-B350.json  UHPT-UHMA-SF34.json  UHSH-UHMM-B350.json  backtrack_1.json  backtrack_2.json  backtrack_3.json  backtrack_4.json  backtrack_5.json  backtrack_6.json  short_flight_vslast3avg.json  zfw.json  zfw_modified.json
scripts/: run.py  visualizer.py
src/mam_analyzer/: context.py  detector.py  evaluator.py  flight_report.py  parser.py  phases.py
src/mam_analyzer/models/: flight_context.py  flight_events.py
src/mam_analyzer/phases/: cruise.py  final_landing.py  flight_phase.py  phases_aggregator.py  shutdown.py  startup.py  takeoff.py  touch_go.py
src/mam_analyzer/utils/: altitude.py  engines.py  filter.py  (+11 more)
tests/: conftest.py  runway_data.py  test_evaluator.py  test_parser.py  test_phases.py  test_phases_startup.py  test_phases_takeoff.py
tests/models/: test_flight_context.py  test_flight_event.py  test_flight_events.py
tests/phases/: test_phases_aggregator.py  test_phases_cruise.py  test_phases_final_landing.py  test_phases_shutdown.py  test_phases_startup.py  test_phases_takeoff.py  test_phases_touch_and_go.py
tests/utils/: test_engines.py  test_heading_range.py  test_parser.py  test_runway.py
(+29 files in other folders)
