[project]
name = "mam-analyzer"
version = "1.1.0"
description = "Analyze and evaluate flight from Mam Acars JSON."
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Unai Sarasola Ãlvarez" }
]

dependencies = [
    "python-dateutil>=2.9.0",
    "shapely>=2.1.0",
    "pyproj>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
